--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>David Rosenberg's Portfolio Site</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -31,6 +32,7 @@
 					<input type="text" name="Email" value="Email"><br>
 					<p>Message</p> <br>
 					<textarea rows="10"></textarea><br>
+					<input type="submit" name="submit" value="Submit">
 				</form>
 			</section>
 			<aside class="social">
