--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
+<div class="wrapper">
 	<header>
 		<nav>
 			<div class="name"><h1>David Rosenberg</h1></div>
@@ -22,26 +23,27 @@
 	</header>
 	
 	<main>
-		<div class="wrapper">
 			<section class="portfolio">
 				<h2>Portfolio</h2>
-				<div class="container" style="margin-right: 40px;"><img src="assets/images/tech2.jpg" width="270" alt="background image"><div class="float"><h4>Hangman</h4></div></div>
-				<div class="container"><img src="assets/images/tech7.jpg" width="270" alt="background image"><div class="float"><h4>RPG Game</h4></div></div>
-				<div class="container" style="margin-right: 40px;"><img src="assets/images/tech6.jpg" width="270" alt="background image"><div class="float"><h4>Trivia Game</h4></div></div>
-				<div class="container"><img src="assets/images/tech1.jpg" width="270" alt="background image"><div class="float"><h4>Rutgers Info Widget</h4></div></div>
-				<div class="container" style="margin-right: 40px;"><img src="assets/images/tech8.jpg" width="270" alt="background image"><div class="float"><h4>Rock Paper Scissors</h4></div></div>
+				<div class="container" style="float: left;"><img src="assets/images/tech2.jpg" alt="background image"><div class="float"><h4>Hangman</h4></div></div>
+				<div class="container" style="float: right;"><img src="assets/images/tech7.jpg" alt="background image"><div class="float"><h4>RPG Game</h4></div></div>
+				<div class="container" style="float: left;"><img src="assets/images/tech6.jpg" alt="background image"><div class="float"><h4>Trivia Game</h4></div></div>
+				<div class="container" style="float: right;"><img src="assets/images/tech1.jpg" alt="background image"><div class="float"><h4>Rutgers Info Widget</h4></div></div>
+				<div class="container" style="float: left;"><img src="assets/images/tech8.jpg" alt="background image"><div class="float"><h4>Rock Paper Scissors</h4></div></div>
 				<div class="clear"></div>
 			</section>
 			<aside class="social">
 				<h3>Connect With Me</h3>
-				<a href="https://github.com/davesrose" target="_blank"><img src="assets/images/github.png" alt="link to github" width="50" height="50"></a>
-				<a href="https://www.linkedin.com/in/david-rosenberg-189a8321/" target="_blank"><img src="assets/images/linkedin.png" alt="link to linkedin" width="50" height="50"></a>
-				<a href="https://stackoverflow.com/users/7842361/d-rosenberg?tab=profile" target="_blank"><img src="assets/images/stackoverflow.png" alt="link to stack overflow" width="50" height="50" style="margin-right: 0px;"></a>
+				<div class="center">
+					<a href="https://github.com/davesrose" target="_blank"><img src="assets/images/github.png" alt="link to github" width="50" height="50"></a>
+					<a href="https://www.linkedin.com/in/david-rosenberg-189a8321/" target="_blank"><img src="assets/images/linkedin.png" alt="link to linkedin" width="50" height="50"></a>
+					<a href="https://stackoverflow.com/users/7842361/d-rosenberg?tab=profile" target="_blank"><img src="assets/images/stackoverflow.png" alt="link to stack overflow" width="50" height="50" style="margin-right: 0px;"></a>
+				</div>
 			</aside>
-		</div>
 	</main>
-	<footer style="height: 100px;">
-		<p style="margin-top: 30px;">&copy; 2017 David Rosenberg</p>
+</div>
+	<footer>
+		<p>&copy; 2017 David Rosenberg</p>
 	</footer>
 </body>
 </html>
